--- a/Professionals/.settings/org.eclipse.core.resources.prefs
+++ b/Professionals/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/com/drop/freelance/Equipments.java=UTF-8
 encoding//src/com/drop/freelance/Lane.java=UTF-8
 encoding//src/com/drop/freelance/MainActivity.java=UTF-8
+encoding//src/com/drop/freelance/client.java=UTF-8
