--- a/Professionals/AndroidManifest.xml
+++ b/Professionals/AndroidManifest.xml
@@ -6,43 +6,46 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+        android:targetSdkVersion="23" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-         >
+        android:label="@string/app_name" >
         <activity
-            android:screenOrientation="portrait" 
-            android:name="com.drop.freelance.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.drop.freelance.SplashActivity"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.drop.freelance.MainActivity" >
+        </activity>
+        <activity android:name="com.drop.freelance.workSetPrefs" >
+        </activity>
         <activity
-            android:name="com.drop.freelance.workSetPrefs"
-           >
-  </activity>
-        <activity android:name="com.drop.freelance.client" >
-            
+            android:name="com.drop.freelance.client" 
+             android:configChanges="orientation|keyboardHidden"
+            android:windowSoftInputMode="stateVisible"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name="com.drop.freelance.Lane" >
-            
         </activity>
         <activity android:name="com.drop.freelance.Equipments" >
-            
         </activity>
         <activity android:name="com.drop.freelance.PrefsActivity" >
         </activity>
-     <activity android:name="com.drop.freelance.acc" >
+        <activity android:name="com.drop.freelance.acc" >
         </activity>
     </application>
 
